# sparv-ocr-correction-plugin

./: .editorconfig  .gitignore  Makefile  README.md  cliff.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: check.yml  ci.yml  release-viklofg-sweocr.yml  scheduled.yml  test.yml
assets/hello-ocr/: config.yaml
assets/hello-ocr/source/: dokument.txt
assets/texts/: dokument.txt
examples/: README.md
examples/christoph-borg/: config.yaml
examples/christoph-borg/source/: christoph-borg.txt
examples/hello-ocr/: config.yaml
examples/issue-39-christoph-borg/: config.yaml
examples/ocr-correction-viklofg-sweocr/: config.yaml
examples/texts/: christoph-borg.txt  dokument.txt
ocr-correction-viklofg-sweocr/: .bumpversion.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml
ocr-correction-viklofg-sweocr/src/ocr_correction/: __init__.py
ocr-correction-viklofg-sweocr/src/sbx_ocr_correction/: __init__.py
ocr-correction-viklofg-sweocr/src/sbx_ocr_correction_viklofg_sweocr/: __init__.py  annotations.py  constants.py  metadata.yaml  ocr_corrector.py
ocr-correction-viklofg-sweocr/src/sbx_ocr_correction_viklofg_sweocr/graph/: graph.py  token.py  utils.py
ocr-correction-viklofg-sweocr/tests/: conftest.py  test_annotations.py  test_ocr_suggestor.py
ocr-correction-viklofg-sweocr/tests/__snapshots__/: test_annotations.ambr  test_ocr_suggestor.ambr
ocr-correction-viklofg-sweocr/tests/test_graph/: test_graph.py  test_token.py
ocr-correction-viklofg-sweocr/tests/test_graph/__snapshots__/: test_token.ambr
src/ocr_correction/: __init__.py
src/ocr_suggestion/: __init__.py
src/sparv_ocr_suggestion/: __init__.py
tests/: conftest.py  requirements-testing.txt  test_ocr_suggestor.py
